--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="blue">#6acce9</color>
     <color name="darkBlue">#27a9e1</color>
+    <color name="lightGrey">#999999</color>
     <color name="veryLightGrey">#D8D8D8</color>
     <color name="veryVeryLightGrey">#F2F2F2</color>
     <color name="whiteHint">#77ffffff</color>
